--- a/Page Wire/Info.plist
+++ b/Page Wire/Info.plist
@@ -25,7 +25,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>660244303275-qmd7h39u9mj81dj3o2lbe3tk41don949.apps.googleusercontent.com</string>
+				<string>com.googleusercontent.apps.116524147870-ldnq24951j94f57f8dpodapsk485kd5v</string>
 			</array>
 		</dict>
 	</array>
