--- a/Page Wire/GoogleService-Info.plist
+++ b/Page Wire/GoogleService-Info.plist
@@ -30,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:116524147870:ios:77766b9fbafbe1b054078f</string>
+	<key>DATABASE_URL</key>
+	<string>https://page-wire-ios-default-rtdb.europe-west1.firebasedatabase.app</string>
 </dict>
 </plist>
