--- a/Page Wire.xcodeproj/xcshareddata/xcschemes/Page Wire.xcscheme
+++ b/Page Wire.xcodeproj/xcshareddata/xcschemes/Page Wire.xcscheme
@@ -50,6 +50,19 @@
             ReferencedContainer = "container:Page Wire.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
